--- a/main.tex
+++ b/main.tex
@@ -223,7 +223,7 @@
 \makebox[0pt][l]{\rule{1.3\textwidth}{1pt}}
 \par
 \noindent
-{\Huge{如何学习使用IONIC}}
+{\Huge{深入学习IONIC}}
 
 \vfill
 \noindent
@@ -238,13 +238,20 @@
 \vfill\noindent
 \vskip \baselineskip
 \vspace{3cm}
-\centerline{ \Large {献给无数工作于手机行业的程序猿}}
+\centerline{ \Large { }}
 \vspace{4cm}
-
+\begin{center}
+    \vfill
+    \emph{\huge 献给无数工作于手机行业的程序猿们.}\\
+    \vspace{0.4cm}
+    \hspace{46ex}  \Large ionic学习小组
+    \vfill
+  \end{center}
+  
 \begin{centering}
  
 \begin{tikzpicture}
- \node [rectangle, font=\Large] {献给无数工作于手机行业的程序猿们};
+% \node [rectangle, font=\Large] {献给无数工作于手机行业的程序猿们};
 \end{tikzpicture}
 \end{centering}
 
@@ -272,7 +279,11 @@
 
 \part{进阶篇}
 
+\input chap_ajs.tex
+
 \input chap_plugin.tex
+
+
 
 % Here's the Bib
 \begin{thebibliography}{99}
