some change, need further work at home

--- a/chap_ajs.tex
+++ b/chap_ajs.tex
@@ -1,3 +1,5 @@
 \chapter{AngularJS}
 
 \section{简介}
+%AngularJS 是由 Google 的员工 Miško Hevery 从 2009 年开始着手开发
+AngularJS 是由 Google 的员工 Miško Hevery 从 2009 年开始着手开发
