--- a/main.tex
+++ b/main.tex
@@ -276,80 +276,21 @@
 
 \input chap_env.tex 
 
+\input chap_useplugin.tex
 
-\part{进阶篇}
+
+\part{高级篇}
 
 \input chap_ajs.tex
 
-\input chap_plugin.tex
+\input chap_writeplugin.tex
+\input chap_deepplugin.tex
 
-
+\part{实战篇}
 
 % Here's the Bib
 \begin{thebibliography}{99}
-\bibitem{bibCRef} Samuel P.Harbison: {\em C - A Reference Manual, Fifth Edition}, C语言参考手册，Printice Hall, Pearson Education Inc., 2002
 \bibitem{bibMasterRegExp} Jeffrey E.F.Friedl: {\em Mastering Regular Expressions}, 2012
-\bibitem{refDCT1974}N. Ahmed, et al: {\em Discrete Cosine Transform}, DCT转换的论文，IEEE Trans. Computers, 90-93, Jan 1974
-\bibitem{refLibjpeg}Independent JPEG Group: {\em www.ijg.org}, libjpeg的官方网址
-\bibitem{bibAwkBook} Alfred V.Aho, Brian W.Kernighan, Peter J. Weinberger: {\em The AWK Programming Language}, Addison-Wesley, 1988
-\bibitem{bibAPUEPID} W.Richard Stevens: {\em Unix环境高级编程}, Chapter 8:Process Control, Page 187,1993
-\bibitem{bibGnuMakefile} GNU Makefile: {\em http://www.gnu.org/software/make}, The GNU Makefile official website
-\bibitem{bibVNC} Real VNC: {\em http://www.realvnc.com}, The RealVNC website
-\bibitem{bibEffectiveCpp} Scott Meyers: {\em Effective C++, Second Edition}, Pearson Education, 2003
-\bibitem{bibEffectiveStl} Scott Meyers: {\em Effective STL}, Pearson Education, 2003
-\bibitem{bibAndBook} Yang SongX: {\em Android Book}, 2014
-\bibitem{bibLibxml2} LibXML2: {\em http://xmlsoft.org}，The LibXML2 package website
-\bibitem{bibProtobuf} Google Protobuf: {\em http://code.google.com/p/protobuf/}, The probobuf website
-\bibitem{bibLinkLoadLibrary} 俞甲子，石凡，潘爱民: {\em 程序员的自我修养－链接、装载与库}, 2009年
-\bibitem{bibSlackWeb} The Slackware Project: {\em http://www.slackware.com}, Slackware official website
-\bibitem{bibProtoBufIntro} 刘明: {\em http://www.ibm.com/developerworks/cn/linux/l-cn-gpb/}, Google Protocol Buffer 的使用和原理，2010年
-\bibitem{bibCvsBook} David Thomas: {\em 版本控制之道-使用CVS}, 电子工业出版社，2005年
-%%Perl
-\bibitem{bibMasteringPerl} brian d foy:{\em Mastering Perl}, 精通Perl(影印版)，O'Reilly, 2008年
-\bibitem{bibLwpBook} Sean M. Burke: {\em Perl \& LWP}, O'Reilly, 1988, 介绍Perl LWP库的参考书
-\bibitem{bibCPAN} CPAN: {\em http://www.cpan.org/}, Perl各种功能模块的下载网站
-\bibitem{bibAPUEPIDSignal} W.Richard Stevens: {\em Unix环境高级编程}, Chapter 10:Signal, Page 263,1993
-\bibitem{bibAndSDK} Android SDK and ADT Bundle: http://developer.android.com/sdk/index.html?hl=sk，Android开发工具下载地址
-
-\bibitem{bibMITAlgorithm}Thomas H.Cormen, Charles E.Leiserson, et.al: {\em Introduction to Algorithms(Third Edition)}, The M.I.T Press, 2009
-
-\bibitem{bibTCPIPVol3}W.Richard Stevens: {\em TCP/IP Illustrated Vol. 3: TCP for Transactions, HTTP, NNTP, and the UNIX Domain Protocols}, 1996
-\bibitem{bibDipBook} Kenneth R. Castleman: {\em Digital Image Processing}, Prentice Hall, 1996, 数字图像处理教材
-\bibitem{bibZLib} ZLib: {\em http://www.zlib.net/}, 压缩解压库ZLib的官方网站
-\bibitem{bibCppJson} json-cpp: {\em http://sourceforge.net/projects/jsoncpp}, C++的JSON数据解析库
-
-\bibitem{bibRabbitMqC} RabbitMQ-C: {\em http://github.com/alanxz/rabbitmq-c}, RabbitMQ的C语言绑定库
-
-\bibitem{bibXFSDK} 讯飞开放平台: {\em http://www.xfyun.cn/} 
-
-%%web framework
-\bibitem{bibJavaPlay} Play: {\em http://www.playframework.com/}, Java Play框架的官方网站
-\bibitem{bibPerlCatalyst} Catalyst: {\em http://www.catalystframework.org/}, 基于Perl的Web框架
-\bibitem{bibDjango} Django: {\em http://www.djangoproject.org/}, 基于Python的Web框架
-\bibitem{bibCppCms} CppCMS: {\em http://www.cppcms.com/}, 基于C++的Web框架
-
-\bibitem{bibHadoop} Apache Hadoop: {\em http://hadoop.apache.org/}
-\bibitem{bibCordova} Apache Cordova框架: {\em http://cordova.apache.org/}
-
-\bibitem{bivsvdFeature} SVD-Feature, 一个feature-based协同过滤(CF)和排序工具，上海交大Apex实验室开发:{http://www.oschina.net/p/svdfeature}
-
-
-%%
-% begin of 3gpp spec references
-\bibitem{bib3gppATCmd} 3gpp TS 27.007: {\em AT command set for User Equipment(UE)}, 手机设备侧的AT命令集标准
-\bibitem{bib3gppSIM} 3gpp TS 51.011/11.11: {\em Specification of SIM-ME interface}, SIM卡的3gpp标准
-%%
-% end of 3gpp spec references
-%%
-
-%% begin of RFC references
-\bibitem{bibRFC1918} RFC 1918: {\em http://www.rfc-editor.org/rfc/rfc1918.txt}, 私网(Private Internets)地址的分配
-\bibitem{bibRFC2083} RFC 2083: {\em http://http://tools.ietf.org/html/rfc2083}, PNG格式标准1.0
-\bibitem{bibRFCSIP} RFC 3261: {\em http://www.ietf.org/rfc/rfc3261.txt}, SIP协议的实现
-\bibitem{bibRFC3489} RFC 3489: {\em http://www.ietf.org/rfc/rfc3489.txt}, STUN协议的实现
-\bibitem{bibRFC3629} RFC 3629: {\em http://www.ietf.org/rfc/rfc3629.txt}, UTF-8编码格式
-\bibitem{bibRFC4648} RFC 4648: {\em http://tools.ietf.org/html/rfc4648}, The Base16，Base32，and Base64 Data Encodings
-%% end of RFC reference
 \end{thebibliography}
 
 
