add a start content

--- a/main.tex
+++ b/main.tex
@@ -274,6 +274,8 @@
 
 \part{基础篇}
 
+\input chap_start.tex
+
 \input chap_env.tex 
 
 \input chap_useplugin.tex
@@ -287,6 +289,8 @@
 \input chap_deepplugin.tex
 
 \part{实战篇}
+
+\input chap_practice.tex
 
 % Here's the Bib
 \begin{thebibliography}{99}
