--- a/main.tex
+++ b/main.tex
@@ -285,8 +285,8 @@
 
 \input chap_ajs.tex
 
-\input chap_writeplugin.tex
-\input chap_deepplugin.tex
+% below contained all plugin-related topics
+\input chap_plugin.tex
 
 \part{实战篇}
 
