--- a/chap_env.tex
+++ b/chap_env.tex
@@ -1,5 +1,7 @@
 \chapter{开发环境的搭建}
 
+\epigraph{We are like dwarfs on the shoulders of giants, by whose grace we see farther than they. Our study of the works of the ancients enables us to give fresh life to their finer ideas, and rescue them from time’s oblivion and man’s neglect.}{Peter of Blois}
+
 \subsection{基础}
 
 环境搭建完成后，node.js会封装一个ionic的命令行工具。
